--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.0",
     "mysql": "^2.17.1",
     "nodemon": "^2.0.1",
+    "sha256": "^0.2.0",
     "sql": "^0.78.0"
   }
 }
